		time generated define/include magic to simulate a template-
		style mechanism in C).
		Reimplementing the M88K divu d,s1,imm instruction.
		Reimplementing the M88K lda.* instruction.
20100203	Beginning on reimplementing M88K bb0.n and bb1.n; only the
		non-singlestepping variant done so far.
20100204	bb0.n and bb1.n should now also work when single-stepping.
		Implementing the non-singlestep variant of M88K jmp.n.
		Beginning on the M88K bcnd.n instruction.
20100205	Continuing on bcnd.n. The testm88k rectangle drawing demo
		now runs :) both when running continuously, and when
		single-stepping. (No graphical output yet, of course.)
20100206	Reimplementing the M88K ext and extu instructions.
		Reimplementing the M88K bb0 and bb1 non-delayslot
		instructions, including samepage variants.
		Reimplementing the M88K stcr, jmp, and tb0 and tb1
		instructions.
		Fixing a bug in the MRU list in DyntransTranslationCache.
		Fixing disassembly of tb0 and tb1, and implementing the
		rest of the bcnd conditions.
		Beginning on reimplementing MIPS (slow) loads/stores,
		and reimplementing the MIPS addu, subu, srl, xor, multu,
		mfhi, mflo, mthi, and mtlo instructions.
20100207	Reimplementing the MIPS slt and sltu instructions, various
		branch instructions, and fixing some bugs; the rectangle
		drawing demo for testmips runs in the new framework :)
		Switching function call trace on/off during runtime now
		clears [individual] translation pages.
20100213	Working on dyntrans abort peculiarities (in the middle of
		delay-slots, etc).
20100214	Preparing for a quick 0.6.0 release.

==============  RELEASE 0.6.0  ==============

20100214	Fixing order of machine.html and components.html generation,
		relative to individual machines from skeleton files.
20100220	Improve install path guessing (DESTDIR and MANDIR) based on
		feedback from Tom Callaway.
		Moving the multiple identical instances of parse_number to a
		new StringHelper class, and adding some unit tests.